# zynthe

./: .env  .env.README.md  .flake8  .gitignore  404.html  AUTO_STUDENT_IMPLEMENTATION_PLAN.md  AUTO_STUDENT_MVP_COMPLETE.md  BACKEND_VALIDATION_TEST_RESULTS.md  BUILT_IN_DATASETS_COMPLETE.md  CHANGELOG.md  CLOUD_DEPLOYMENT.md  CONTRIBUTING.md  DATA_QUALITY_FEATURES_COMPLETE.md  DOWNLOAD_PROGRESS_QUICKSTART.md  DOWNLOAD_PROGRESS_VISUAL_GUIDE.md  E2E_TESTING_GUIDE.md  E2E_TEST_REPORT.md  EVALUATION_QUICK_START.md  EVALUATION_UI_INTEGRATION_COMPLETE.md  FEATURE_SUMMARY.md  FRONTEND_INTEGRATION.md  HF_TOKEN_SETUP_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_REPORT.md  INTEGRATION_VERIFIED.md  LICENSE  LIVE_TRAINING_MONITOR_GUIDE.md  M2_TEST_GUIDE.md  MAC_M2_MODEL_GUIDE.md  MAIN_PY_ANALYSIS.md  MAIN_PY_READY.md  MODEL_BROWSER_COMPLETE.md  MODEL_IDS_FIXED.md  MODEL_VALIDATION_COMPLETE.md  NEW_FEATURES_GUIDE.md  NOTIFICATION_SYSTEM_COMPLETE.md  OPTIMIZER_SCHEDULER_COMPLETE.md  PACKAGING_GUIDE.md  PREFLIGHT_SYSTEM_COMPLETE.md  PREFLIGHT_USER_GUIDE.md  (+87 more)
.github/: FUNDING.yml
0/: note.ipynb
HANDOFF/: index.html
adapters/: index.html
api_reference/: index.html
app/: cli_helpers.py  diagnose.py  live_stream.py  main.py  main_new.py  runtime.py  server.py
audit/: index.html
benchmarks/: index.html
configs/: advanced.yaml  agent_auto.yaml  attention_multimodal.yaml  attention_transfer_advanced.yaml  attention_video.yaml  auto_student.yaml  balanced.yaml  causal_lm_core_minimal.yaml  cifar10_vit.yaml  cpu_smoke_test.yaml  default.yaml  electra_high_compression.yaml  feature_distillation.yaml  kaggle_dual_t4.yaml  kaggle_p100_full.yaml  kaggle_p100_smoke.yaml  kaggle_quick_test.yaml  kaggle_qwen_attention_test.yaml  kaggle_qwen_feature_test.yaml  kaggle_qwen_hinton_test.yaml  kaggle_qwen_test.yaml  kaggle_t4_dual.yaml  kaggle_t4_single.yaml  kd_hinton_advanced.yaml  m2_test.yaml  mac_m2_optimized.yaml  mac_m2_test.yaml  multi_stage.yaml  multi_stage_auto.yaml  multimodal_clip.yaml  quick_test_minilm.yaml  roberta_balanced.yaml  similarity_transfer.yaml  t4_gpt_feature_lowmem_qat_plan.yaml  t4_gpt_feature_teacher_student.yaml  test_backend_validation.yaml  test_invalid.yaml  test_invalid_data.yaml  test_live_quick.yaml  test_visualization.yaml  (+3 more)
core/: __init__.py
data/: augmentations.py  dataloaders.py  image_dataloaders.py  imdb_sample.jsonl  imdb_train.jsonl  imdb_val.jsonl  preprocess.py
distillation-methods/: index.html
distributed/: index.html
docs/: ATTENTION_IMPLEMENTATION_SUMMARY.md  ATTENTION_QUICKREF.md  ATTENTION_TRANSFER_GUIDE.md  AUTO_STUDENT_GUIDE.md  COMPARISON_COMPLETE.md  COMPARISON_FEATURE.md  COMPARISON_IMPLEMENTATION_SUMMARY.md  COMPARISON_INTEGRATION_SUMMARY.md  COMPARISON_QUICKREF.md  CONFIG_MANAGER_IMPROVEMENTS.md  CONFIG_REVIEW_SUMMARY.md  DISTILLATION_WORKFLOW.md  FUTURE_FEATURES.md  HANDOFF.md  ISSUE_RESOLUTION_OCT23.md  MAC_M2_MODEL_PAIRS.md  OPTIMIZER_GUIDE.md  PHASE_A_COMPLETE.md  PHASE_A_INTEGRATION_COMPLETE.md  PREFLIGHT_GUIDE.md  PREFLIGHT_INTEGRATION.md  SIMILARITY_TRANSFER.md  TEACHER_AGENT.md  TEACHER_AGENT_UI_INTEGRATION.md  TEACHER_ISSUE_ANALYSIS.md  TEACHER_TRAINING_AND_CONFUSION_MATRIX.md  TRAINER_FIX_EXPLAINED.md  WORKFLOW_TEST_WITH_VISUALIZATION.md  ZYNTHE_EVALX_PHASE_A.md  ZYNTHE_EVALX_QUICKREF.md  ZYNTHE_EVALX_SUMMARY.md  adapters.md  api_reference.md  audit.md  benchmarks.md  distillation-methods.md  distributed.md  index.md  model_comparison_guide.md  phase3_status.md  (+8 more)
evaluation/: __init__.py  diagnostics.py  evaluation_report.py  evaluator.py  evaluator_extended.py  metrics.py  metrics_extended.py  model_comparison.py  visualizer.py
examples/: Teacher_vs_Student_Comparison.ipynb  attention_transfer_examples.py  causal_lm_validation_smoke.py  compare_teacher_student.py  full_demo.py  kaggle_sst2_distillation.py  kaggle_t4_test.py  minimal_distill.py  pipeline_trainer_integration.py  teacher_agent_demo.py
ezl_toolkit/: .gitattributes  README.md  demo.py  distillation_toolkit.py  optimized_demo.py  requirements.txt  test_model.py
knowledge-distillation-toolkit/: BACKEND_CONNECTION_COMPLETE.md  DOWNLOAD_PROGRESS_COMPLETE.md  DOWNLOAD_PROGRESS_SUMMARY.md  JSON_SERIALIZATION_FIX.md  README.md  TRAINING_OPTIMIZATIONS_COMPLETE.md  test_comparison.py  test_evaluation_api.py  test_evaluation_api.sh  validate_yaml.py
notebooks/: Zynthe_Cloud_Backend.ipynb  kaggle_dual_t4_test.ipynb  kaggle_multi_model_test.ipynb  kaggle_nlp_distillation.ipynb  kaggle_vision_distillation.ipynb  pipeline_colab_test.ipynb  test_distillation_colab.ipynb  test_vision_colab.ipynb
phase3_status/: index.html
phase4_status/: index.html
phase5_status/: index.html
phase6_status/: index.html
preflight_reports/: optimized_config.yaml  preflight_report_20251023_020251.json  preflight_report_20251023_020251.txt
quant/: index.html
quickstart/: index.html
real_code/: multi_stage_report.json  multi_stage_report.yaml  stage_comparison.csv  stage_comparison.json
real_mm/: multi_stage_report.json  multi_stage_report.yaml  stage_comparison.csv  stage_comparison.json
real_vision/: multi_stage_report.json  multi_stage_report.yaml  stage_comparison.csv  stage_comparison.json
scripts/: check_artifacts.py  debug_preprocessing.py  extract_rationales.py  run_distill_step_by_step.py  setup-venv.sh  test_visualizations.py
search/: search_index.json
test_output/: stage_1_checkpoint.pt
tests/: conftest.py  test_accuracy_improvements.py  test_adapters.py  test_adapters_extended.py  test_attention_transfer.py  test_aux_head_distiller.py  test_base_distiller.py  test_causal_lm_engine.py  test_cli_banner.py  test_contrastive_distiller.py  test_cpu_smoke.py  test_dataloaders.py  test_ddp_script.py  test_distiller_api.py  test_distillers.py  test_distillers_compute_loss.py  test_distributed.py  test_evaluation_report.py  test_extract_rationales.py  test_feature_distiller.py  test_fixes.py  test_imports.py  test_kd_hinton.py  test_mkdocs_nav.py  test_model_loader_modality.py  test_model_saver.py  test_optimizer_and_overrides.py  test_optional_imports.py  (+14 more)
(+406 files in other folders)
