[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zynthe"
version = "0.2.5"
description = "Universal knowledge distillation toolkit for text, code, vision, and multimodal models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lakshin", email = "lakshin7@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "knowledge-distillation",
    "model-compression",
    "deep-learning",
    "transformers",
    "pytorch",
    "quantization",
]
dependencies = [
    "torch>=2.1.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "rich>=13.5.2",
    "transformers>=4.34.0",
    "accelerate>=0.23.0",
    "psutil>=5.9.0",
]

[project.scripts]
zynthe = "zynthe.cli:main"

[project.optional-dependencies]
vision = [
    "torchvision>=0.16.0",
    "Pillow>=9.0",
]
eval = [
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
]
onnx = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]
all = [
    "zynthe[vision,eval,onnx]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/lakshin7/zynthe"
Repository = "https://github.com/lakshin7/zynthe"
Issues = "https://github.com/lakshin7/zynthe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zynthe"]

[tool.hatch.build.targets.wheel.force-include]
"configs/" = "zynthe/configs/"
"src/zynthe/py.typed" = "zynthe/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
packages = ["zynthe"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
