[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zynthe"
version = "0.2.6"
description = "Universal knowledge distillation toolkit for text, code, vision, and multimodal models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lakshin", email = "lakshin7@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "knowledge-distillation",
    "model-compression",
    "deep-learning",
    "transformers",
    "pytorch",
    "quantization",
]
dependencies = [
    "torch>=2.1.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "rich>=13.5.2",
    "transformers>=4.34.0",
    "accelerate>=0.23.0",
    "psutil>=5.9.0",
]

[project.scripts]
zynthe = "zynthe.cli:main"

[project.optional-dependencies]
vision = [
    "torchvision>=0.16.0",
    "Pillow>=9.0",
]
eval = [
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
]
onnx = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "optimum[onnxruntime]>=1.13.0",
]
all = [
    "zynthe[vision,eval,onnx]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/lakshin7/zynthe"
Repository = "https://github.com/lakshin7/zynthe"
Issues = "https://github.com/lakshin7/zynthe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zynthe"]

[tool.hatch.build.targets.wheel.force-include]
"configs/" = "zynthe/configs/"
"src/zynthe/py.typed" = "zynthe/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
addopts = "-ra"
# Phase 1: silence third-party deprecations that we cannot fix (matplotlib
# -> pyparsing), keep our own UserWarnings visible. Use `-W error::UserWarning`
# from the CLI to re-promote first-party warnings to errors when triaging.
filterwarnings = [
    # Phase 1: silence third-party deprecations from matplotlib / pyparsing
    # that we cannot fix. Use `-W error::UserWarning` on the CLI to promote
    # any first-party UserWarnings to errors during triage.
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:pyparsing.*",
]

[tool.coverage.run]
branch = true
source = ["src/zynthe"]
omit = [
    "src/zynthe/data/*",
    "src/zynthe/evaluation/*",
    "src/zynthe/py.typed",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Phase 1 reality: total coverage is ~15% — there's a lot of untouched
# surface in distillers, adapters, preflight, training, evaluation.
# We phase the gate up: 25% by end of Phase 1, 50% by Phase 3, 70%
# by Phase 5 (v1.0 release).
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
packages = ["zynthe"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
